src/test/resources/error/EnumerationError.mch
MACHINE EnumerationError
VARIABLES x
INVARIANT x = [1]
INITIALISATION x:(x: seq({1}) & x^x = [1,1])
END